# Trimora

./: .gitignore  GITHUB_PYPI.md  INSTALL_FROM_GITHUB.md  LICENSE  PUBLISHING.md  README.md  TESTING.md  prompt.txt  pyproject.toml  upload_to_pypi.sh
.github/workflows/: publish.yml
trimora/: __init__.py  ai_model.py  cli.py  fastp.py  fastqc.py  optimizer.py  parser.py  utils.py
